# autofacts

./: LICENSE  README.md
examples/: simple.bc  simple.c
llvmstuff/: CMakeLists.txt
llvmstuff/llvmpasses/: CMakeLists.txt
llvmstuff/llvmpasses/FactsInserter/: CMakeLists.txt
llvmstuff/llvmpasses/FactsInserter/include/: ContextSensitiveFacts.h  FactsInserterManager.h  FactsSelector.h  FactsType.h  ModuleHelper.h  ReverseCallGraph.h
llvmstuff/llvmpasses/FactsInserter/src/: ContextSensitiveFacts.cpp  FactsInserter.cpp  FactsInserterManager.cpp  FactsSelector.cpp  ModuleHelper.cpp  ReverseCallGraph.cpp
sample_dataset/dnsdomainname/100_dataptr_cs/: dnsdomainname.0.4.opt.mem2reg.bc
sample_dataset/dnsdomainname/100_dataptr_fcs/: dnsdomainname.0.4.opt.mem2reg.bc  output_stats.json
sample_dataset/dnsdomainname/100_funcptr_cs/: dnsdomainname.0.4.opt.mem2reg.bc  output_stats.json
sample_dataset/dnsdomainname/100_funcptr_fcs/: dnsdomainname.0.4.opt.mem2reg.bc  output_stats.json
sample_dataset/dnsdomainname/100_funcptr_fps/: dnsdomainname.0.4.opt.mem2reg.bc  output_stats.json
sample_dataset/dnsdomainname/100_funcptr_ns/: dnsdomainname.0.4.opt.mem2reg.bc
sample_dataset/dnsdomainname/100_funcptr_ps/: dnsdomainname.0.4.opt.mem2reg.bc  output_stats.json
sample_dataset/dnsdomainname/150_dataptr_cs/: dnsdomainname.0.4.opt.mem2reg.bc  output_stats.json
sample_dataset/dnsdomainname/150_dataptr_fcs/: dnsdomainname.0.4.opt.mem2reg.bc  output_stats.json
sample_dataset/dnsdomainname/150_funcptr_cs/: dnsdomainname.0.4.opt.mem2reg.bc  output_stats.json
(+3059 files in other folders)
